--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,7 +61,7 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
+  --bs-body-color: #0b1c2d;
   --bs-body-bg: #044767;
   --bs-border-width: 1px;
   --bs-border-style: solid;
